forth/test/fail/test_stack_cond_elif_missing_pred.af
use' ../../lang_s.af

fun: .test_stack_cond_elif_missing_pred_fail
  false .then 10
  elif
  end
end
